2013-02-22  Ali Juma  <ajuma@chromium.org>

        [chromium] Register newly-created layers for animation
        https://bugs.webkit.org/show_bug.cgi?id=106594

        Reviewed by James Robinson.

        * WebKit.gyp:
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::ChromeClientImpl):
        (WebKit::ChromeClientImpl::graphicsLayerFactory):
        * src/ChromeClientImpl.h:
        (ChromeClientImpl):
        * src/GraphicsLayerFactoryChromium.cpp: Added.
        (WebKit):
        (WebKit::GraphicsLayerFactoryChromium::GraphicsLayerFactoryChromium):
        (WebKit::GraphicsLayerFactoryChromium::~GraphicsLayerFactoryChromium):
        (WebKit::GraphicsLayerFactoryChromium::createGraphicsLayer):
        * src/GraphicsLayerFactoryChromium.h: Added.
        (WebKit):
        (GraphicsLayerFactoryChromium):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::WebViewImpl):
        (WebKit::WebViewImpl::graphicsLayerFactory):
        (WebKit):
        (WebKit::WebViewImpl::registerForAnimations):
        * src/WebViewImpl.h:
        (WebViewImpl):

2013-02-22  Fady Samuel  <fsamuel@chromium.org>

        [Chromium] Expose shadowRoot to the WebKit API
        https://bugs.webkit.org/show_bug.cgi?id=110522

        Reviewed by Dimitri Glazkov.

        * public/WebElement.h:
        (WebElement):
        * src/WebElement.cpp:
        (WebKit::WebElement::shadowRoot):
        (WebKit):

2013-02-22  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r143734.
        http://trac.webkit.org/changeset/143734
        https://bugs.webkit.org/show_bug.cgi?id=110615

        Causes linux build failures. (Requested by vollick on
        #webkit).

        * public/WebKit.h:
        (WebKit):
        * src/WebKit.cpp:
        (WebKit::initialize):
        (WebKit::initializeWithoutV8):
        (WebKit::webKitPlatformSupport):

2013-02-22  Mikhail Naganov  <mnaganov@chromium.org>
